build(test): open java.util module for AssertJ Swing on Java 17