@@ -42,7 +42,12 @@
     <version>5.10.1</version>
     <scope>test</scope>
 </dependency>
-
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>5.8.0</version>
+    <scope>test</scope>
+</dependency>
 
         <!-- MongoDB Java Driver (REAL MongoDB) -->
         <dependency>
@@ -64,12 +69,17 @@
     <build>
         <plugins>
 
-            <!-- Unit tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-            </plugin>
+           <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.2.5</version>
+    <configuration>
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+        </argLine>
+    </configuration>
+</plugin>
+
 
             <!-- Integration tests (Failsafe) -->
             <plugin>
